--- a/Sling/React-redux-Projects/MyWebsite/src/index.scss
+++ b/Sling/React-redux-Projects/MyWebsite/src/index.scss
@@ -6,9 +6,8 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   overflow: visible;
-  position: fixed;
   width: 100%;
-  height: 100%;
+  height: fit-content;
   left: 0;
   top: 0;
   background-color: #c5c6c7;
